2008-11-04  Jakub Jelinek  <jakuB@redhat.com>

	* print-tree.c (print_node): Use code instead of TREE_CODE (node).

	* print-tree.c (print_node): Don't print DECL_INITIAL
	for PARM_DECL.

	PR c/37106
	* c-common.c (parse_optimize_options): Save and restore
	flag_strict_aliasing around decode_options call.

2008-11-04  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/driver-i386.c (enum vendor_signatures): New enum.
	(host_detect_local_cpu): Use it instead of casted strings to
	compare vendor signatures.

2008-11-03  Mikael Pettersson  <mikpe@it.uu.se>

        PR target/37989
	* config/i386/mingw32.h (REAL_LIBGCC_SPEC): Only add libgcc_s.a
	or libgcc_eh.a to spec if ENABLE_SHARED_LIBGCC.

2008-11-03  Catherine Moore  <clm@codesourcery.com>

	* config/mips.c (mips_conditional_register_usage):  Handle the
	DSP control register.
	* doc/extend.texi: Document the DSP control register.
			    
2008-11-03  Steve Ellcey <sje@cup.hp.com>
	    Jakub Jelinek  <jakub@redhat.com>

	* omp-low.c (expand_omp_for_generic): If iter_type has different
	precision than type and type is a pointer type, cast n1 and n2
	first to an integer type with the same precision as pointers
	and only afterwards to iter_type.

2008-11-03  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/arm/arm.md (UNSPEC_PIC_BASE): Update documentation.
	(UNSPEC_GOTSYM_OFF): New unspec.
	(pic_add_dot_plus_four): Simplify the UNSPEC_PIC_BASE operands.
	(pic_add_dot_plus_eight): Likewise.
	(tls_load_dot_plus_eight): Likewise.  Update peephole2.
	* config/arm/thumb2.md (pic_load_dot_plus_four): Simplify the
	UNSPEC_PIC_BASE operands.
	* config/arm/arm.c (arm_load_pic_register): Use UNSPEC_GOTSYM_OFF.
	(arm_output_addr_const_extra): Handle it.

2008-11-03  Eric Botcazou  <ebotcazou@adacore.com>

	* config/i386/i386.c (classify_argument) <ARRAY_TYPE>: Promote partial
	integer class to full integer class if the offset is not word-aligned.

2008-11-03  Andrew Pinski  <andrew_pinski@playstation.sony.com>
